--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -3,14 +3,14 @@
   <a id="github-link"
      class="icon" title="GitHub" aria-label="GitHub"
      href="https://github.com/Roimex" target="_blank">
-    {% include svg/github-mark.svg %}
+    {% include svg/github-mark.svg width="24" height="24" %}
   </a>
 
   <!-- Hugging Face -->
   <a id="hugging-face-link"
      class="icon" title="Hugging Face" aria-label="Hugging Face"
      href="https://huggingface.co/Roimex" target="_blank">
-    {% include svg/hf-logo.svg %}
+    {% include svg/hf-logo.svg width="24" height="24" %}
   </a>
 
   {% include custom-icon-links.html %}
