--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -3,7 +3,7 @@
   <a id="github-link"
      class="icon" title="GitHub" aria-label="GitHub"
      href="https://github.com/Roimex" target="_blank">
-    {% include svg/github-mark.svg %}
+    {% include svg/github.svg %}
   </a>
 
   <!-- Hugging Face -->
