--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -283,7 +283,7 @@ body {
 #sidebar-icon-links {
   flex-flow: flex;
   justify-content: center;
-  margin-top: 0.5rem;
+  align-items: center;
   max-width: 100%;
 
   @media (min-width: $large-breakpoint) {
