--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,3 +1,3 @@
 <p>
-  &copy; <a href="{{ "/LICENSE.md" | relative_url }}">MIT License</a>, and code permission from Dylan Folsom.
+  &copy; <a href="{{ "/LICENSE.md" | relative_url }}">MIT License</a>
 </p>
